--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         }
     },
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "topthink/framework": "^6.1"
     }
 }
