优化：topthink/framework版本约束^6.0|^6.1|^8.0

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,6 @@
     },
     "require": {
         "php": ">=7.4",
-        "topthink/framework": "^6.1"
+        "topthink/framework": "^6.0|^6.1|^8.0"
     }
 }
