--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,31 @@
 {
-    "name": "ledc/think-model-trait",
-    "description": "批量生成thinkPHP项目的数据表注释",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "david",
-            "email": "367013672@qq.com",
-            "homepage": "https://www.iyuu.cn",
-            "role": "Developer"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Ledc\\ThinkModelTrait\\": "src/"
-        }
-    },
-    "extra": {
-        "think": {
-            "services": [
-                "Ledc\\ThinkModelTrait\\Service"
-            ]
-        }
-    },
-    "require": {
-        "php": ">=7.4",
-        "topthink/framework": "^6.0|^8.0"
+  "name": "ledc/think-model-trait",
+  "description": "批量生成thinkPHP项目的数据表注释",
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "david",
+      "email": "367013672@qq.com",
+      "homepage": "https://www.iyuu.cn",
+      "role": "Developer"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Ledc\\ThinkModelTrait\\": "src/"
+    }
+  },
+  "extra": {
+    "think": {
+      "services": [
+        "Ledc\\ThinkModelTrait\\Service"
+      ]
+    }
+  },
+  "require": {
+    "php": ">=7.4",
+    "topthink/framework": ">=6.0",
+    "ext-json": "*"
+  }
 }
