--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
   },
   "require": {
     "php": ">=7.4",
-    "topthink/framework": ">=6.0",
-    "ext-json": "*"
+    "topthink/framework": ">=6.0 | >=8.0",
+    "ext-json": "*",
+    "ext-curl": "*"
   }
 }
