--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
   "autoload": {
     "psr-4": {
       "Ledc\\ThinkModelTrait\\": "src/"
-    }
+    },
+    "files": [
+      "src/helper.php"
+    ]
   },
   "extra": {
     "think": {
@@ -27,6 +30,7 @@
     "php": ">=7.4",
     "topthink/framework": ">=6.0 | >=8.0",
     "ext-json": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-redis": "*"
   }
 }
