--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
   },
   "require": {
     "php": ">=7.4",
-    "topthink/framework": ">=6.0 | >=8.0",
+    "topthink/framework": ">=6.0 || >=8.0",
+    "topthink/think-migration": ">=3.0",
     "ext-json": "*",
     "ext-curl": "*",
     "ext-redis": "*"
